code corrected for readablility. enter button for input now works

--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,7 +1,3 @@
 .strike{
     text-decoration: line-through;
 }
-
-.hidden {
-    display: none;
-}
